k8s/deploy/api-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-clip
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 8080
      targetPort: 8080
      name: api
      protocol: TCP
