k8s/deploy/api-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ssl-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: "hua-management.ddns.net"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-clip
                port:
                  number: 8080
  tls:
    - hosts:
        - hua-management.ddns.net
      secretName: api-production-certificate
